<resources>
    <string name="app_name">BloodDonor</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

    <string name="web_client_id">221240294449-lgghmukosp3jpu6h9ub6ctn90imo01vg.apps.googleusercontent.com</string>
    <string name="content_text">Login/ Signup</string>

    <string name="Name_label">Name</string>
    <string name="Email_label">Email</string>
    <string name="Id_label">Id</string>
    <string name="Logout_label">Logout</string>

    <array name="blood_group">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>O+</item>
        <item>O-</item>
        <item>AB+</item>
        <item>AB-</item>
    </array>
    <array name="gender_grp">
        <item>Male</item>
        <item>Female</item>
    </array>
</resources>
